#------------------------------------------------------------------------------#
#
# Project Tears Engine
# Copyright (C) 2021-2022 hvhvdevdev <m@hvdev.cc>
#
# This file is part of Tears Engine.
#
# Tears Engine is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation, either version 2.1 of the License, or (at your option)
# any later version.
#
# Tears Engine is distributed in the hope that it will be useful, but WITHOUT 
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
# details.
#
# You should have received a copy of the GNU Lesser General Public License along
# with Tears Engine. If not, see <https://www.gnu.org/licenses/>.
#
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Project Setup
#------------------------------------------------------------------------------#
project('tears-engine', 'cpp',
    version: '0.1.0',
    license: 'LGPL',
    default_options: ['cpp_std=c++17'])

#------------------------------------------------------------------------------#
# Variables
#------------------------------------------------------------------------------#
executable_name = 'tears'

#------------------------------------------------------------------------------#
# Sub directories
#------------------------------------------------------------------------------#
subdir('lib')
subdir('doc')
subdir('tears')

#------------------------------------------------------------------------------#