#------------------------------------------------------------------------------#
# Source files
#------------------------------------------------------------------------------#
sources = ['Main.cc']

#------------------------------------------------------------------------------#
# Dependencies
#------------------------------------------------------------------------------#
dependencies = []

#------------------------------------------------------------------------------#
# Executable
#------------------------------------------------------------------------------#
executable(executable_name,
    sources: sources,
    cpp_args: [],
    dependencies: dependencies,
    )